# sahi-mfg.github.io

./: .gitignore  Gemfile  README.md  _config.yml  _quarto.yml  about.md  about.qmd  build.py  categories.md  custom.scss  index.md  index.qmd  main.py  posts.qmd  pyproject.toml  styles.css
.github/workflows/: publish.yml
.jupyter_cache/: global.db
.jupyter_cache/executed/394e545e44f9abdbf54e3111035ee682/: base.ipynb
_freeze/index/execute-results/: html.json
_freeze/posts/2025-09-26-seconde/execute-results/: html.json
_includes/: footer.html  head-custom.html  header.html  social.html
_includes_backup/: footer.html  head.html
_layouts/: categories.html  default.html  home.html  post.html
_old/: _config.yml  about_old.md  categories.md  categories_backup.html  categories_backup.md  debug.html  debug.md
_old/_layouts_backup/: default.html  home.html
_old/_posts/: 2025-09-29-test-categorisation.md
_old/assets/css/: style_backup.scss
_posts/: 2024-01-15-mathematical-thinking-everyday-life.md  2024-01-20-clean-code-principles.md  2024-01-25-data-storytelling.md  2024-01-30-philosophy-of-learning.md  2024-02-05-digital-divide-ivory-coast.md  2025-09-26-En-vrai-c-est-quoi-une-seconde.md
assets/css/: style.scss
assets/images/: favicon.ico.txt  site.webmanifest
categories/: data-science.qmd  mathematiques.qmd  philosophie.qmd  physique.qmd  programmation.qmd
posts/: 2025-09-26-seconde.qmd  2025-09-29-dataviz-python.qmd  2025-09-29-test-categorisation.qmd
posts/.jupyter_cache/: global.db
(+3 files in other folders)
